k8s/app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app
  namespace: model-serving
spec:
  replicas: 2
  selector:
    matchLabels:
      app: app
  template:
    metadata:
      labels:
        app: app
    spec:
      containers:
      - name: app
        image: magnusdtd/app:latest     
        ports:
        - containerPort: 8000
        command: ["uvicorn", "main:app", "--host", "0.0.0.0", "--port", "8000"]
---
apiVersion: v1
kind: Service
metadata:
  name: app
  namespace: model-serving
spec:
  ports:
  - port: 8000
    targetPort: 8000
  selector:
    app: app
